# microsoft-agent-hackathon

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.kodama  README.md  pyproject.toml
.claude/commands/: build-fix.md  code-review.md  plan.md  tdd.md
.github/workflows/: ci.yml
.playwright-mcp/: page-2026-05-26T04-11-13-483Z.yml  page-2026-05-26T04-11-33-955Z.yml  page-2026-05-27T00-21-07-357Z.yml  page-2026-05-27T00-21-42-579Z.yml  page-2026-05-27T00-23-25-183Z.yml  page-2026-05-27T00-23-57-011Z.yml  page-2026-05-27T00-37-00-714Z.yml  page-2026-05-27T00-38-37-730Z.yml  page-2026-05-27T00-44-18-002Z.yml  page-2026-05-27T00-44-57-584Z.yml
docs/: architecture.md  azure-setup.md  operations.md  requirements.md  status.md  zenn-article.md
docs/sample_data/: cold_start_templates.json  success_cases.json
frontend/: .gitignore  design.pen  eslint.config.js  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
scripts/: create_agent.py  create_agents.py  update_orchestrator.py
src/: app.py  config.py
src/agents/: __init__.py  collector.py  matcher.py  observer.py  (+2 more)
tests/: test_agents_metadata.py  test_api.py  test_api_bookmarks.py  test_api_cases.py  test_api_pain.py  test_api_signals.py  test_api_teams.py  test_board.py  test_case_writer.py  test_categories_master.py  test_cold_start_templates.py  test_graph_observe.py  test_llm_classify.py  test_seed_and_embedding.py  test_signal_classify.py  test_signal_store.py  test_slack_bot.py  test_slack_filters.py  test_smoke.py  test_teams_adapter.py  test_tools.py
(+75 files in other folders)
